Fix text wrapping issue in footer and aboutmain sections

--- a/css/about.css
+++ b/css/about.css
@@ -68,6 +68,7 @@ footer{
     line-height: 2rem;
     letter-spacing: 0.1em;
     color: var(--main-text-color);
+    text-wrap: balance;
   }
 
   .maintextend{
@@ -77,6 +78,7 @@ footer{
     line-height: 2rem;
     letter-spacing: 0.1em;
     color: var(--main-text-color);
+    text-wrap: balance;
   }
 
   .aboutmain{
